REOPENED - bug 6344: DB Numeric Binner node https://bugs.knime.org/show_bug.cgi?id=6344
fixed several issues in numeric binner and apply binner